--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-01  Richard Henderson  <rth@redhat.com>
+
+        * alpha-tdep.c (alpha_register_reggroup_p): New.
+        (alpha_gdbarch_init): Register it.
+
 2003-06-02  Andrew Cagney  <cagney@redhat.com>
 
 	* dwarfread.c: Eliminate "register"
