--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,12 @@
 2003-06-01  Richard Henderson  <rth@redhat.com>
 
+        * Makefile.in (ALLDEPFILES): Add alpha-mdebug-tdep.c.
+        (alpha-linux-tdep.o): Update dependencies.
+        (alpha-nat.o, alpha-tdep.o, alpha-mdebug-tdep.o): Likewise.
+        * alpha-mdebug-tdep.c: Remove unneeded includes.
+
+2003-06-01  Richard Henderson  <rth@redhat.com>
+
         * alpha-tdep.c (alpha_register_reggroup_p): New.
         (alpha_gdbarch_init): Register it.
 
