--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2003-06-02  Richard Henderson  <rth@redhat.com>
 
+	* gdb.base/selftest.exp: Next over lim_at_start initialization.
+
+2003-06-02  Richard Henderson  <rth@redhat.com>
+
 	* gdb.base/dump.exp [alpha*-*-*]: Add -taso linker switch.
 
 2003-06-01  Daniel Jacobowitz  <drow@mvista.com>
