--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,8 @@
 2003-06-02  Richard Henderson  <rth@redhat.com>
 
+        * alpha-tdep.c (alpha_extract_return_value): Handle IEEE Quad floats.
+        (alpha_store_return_value): Error on IEEE Quad floats.
+
         * alpha-tdep.c (alpha_extract_return_value): Convert to regcache.
         (alpha_extract_struct_value_address): Likewise.
         (alpha_store_return_value): Likewise.
