--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,9 @@
 2003-06-02  Richard Henderson  <rth@redhat.com>
 
+        * alpha-tdep.c (alpha_push_dummy_call): Handle ABI mandated 
+        sign-extension of 32-bit values.
+        (alpha_store_return_value): Similarly.
+
         * alpha-tdep.c (alpha_push_dummy_call): Handle COMPLEX types.
         (alpha_extract_return_value): Likewise.
         (alpha_store_return_value): Likewise.
