--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,7 @@
 2003-06-02  Richard Henderson  <rth@redhat.com>
 
+	* alpha-tdep.c (alpha_store_return_value): Avoid switch fallthru.
+
 	* alpha-tdep.c (alpha_extract_return_value): Use internal_error.
 	(alpha_store_return_value): Likewise.
 
