--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2003-06-02  Richard Henderson  <rth@redhat.com>
 
+	* alpha-tdep.c (alpha_register_virtual_type): Use alpha-specific
+	regnum identifiers.
+	(alpha_sigtramp_register_address): Likewise.
+
+2003-06-02  Richard Henderson  <rth@redhat.com>
+
 	* alpha-tdep.c (alpha_supply_int_regs, alpha_fill_int_regs): New.
 	(alpha_supply_fp_regs, alpha_fill_fp_regs): New.
 	* alpha-tdep.h: Declare them.
