--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,19 @@
+2003-06-02  Andrew Cagney  <cagney@redhat.com>
+
+	* alpha-tdep.c (alpha_gdbarch_init): Set convert_register_p,
+	register_to_value, and value_to_register, instead of
+	register_convertible, register_convert_to_raw, and
+	register_convert_to_virtual.
+	* rs6000-tdep.c (rs6000_gdbarch_init): Ditto.
+	* ia64-tdep.c (ia64_gdbarch_init): Ditto.
+	* i386-tdep.c (i386_gdbarch_init): Ditto.
+	* sparc-tdep.c (sparc_print_registers): Delete call to
+	REGISTER_CONVERTIBLE.
+	(sparc_gdbarch_init): Do not set register_convertible.
+	* m68hc11-tdep.c (m68hc11_gdbarch_init): Ditto.
+	* frv-tdep.c (frv_gdbarch_init): Ditto.
+	* cris-tdep.c (cris_gdbarch_init): Ditto.
+
 2003-06-02  Elena Zannoni  <ezannoni@redhat.com>
 
 	* target.h (TARGET_SYMFILE_POSTREAD): Delete unused macro. 
