--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-03  Raoul Gough  <RaoulGough@yahoo.co.uk>
+
+	* MAINTAINERS (write after approval): Add myself.
+
 2003-06-03  Jim Blandy  <jimb@redhat.com>
 
 	* s390-nat.c (supply_gregset, fill_gregset): On the s390x, the
