--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2003-06-03  J. Brobecker  <brobecker@gnat.com>
 
+	* alpha-osf1-tdep.c (alpha_osf1_sigcontext_addr): Replace
+	references to struct frame_info fields by calls to the equivalent
+	accessors. Necessary now that frame_info is opaque.
+
+2003-06-03  J. Brobecker  <brobecker@gnat.com>
+
 	* alpha-osf1-tdep.c (alpha_osf1_skip_sigtramp_frame): Delete.
 	(alpha_osf1_init_abi): Do not set skip_sigtramp_frame in tdep
 	structure, field no longer exists.
