--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,12 @@
 2003-06-03  Richard Henderson  <rth@redhat.com>
 
+	* alpha-mdebug-tdep.c (alpha_mdebug_after_prologue): Use 
+	alpha-specific register id names.
+	(alpha_mdebug_frame_unwind_cache): Likewise.
+	(alpha_mdebug_frame_prev_register): Likewise.
+
+2003-06-03  Richard Henderson  <rth@redhat.com>
+
 	* alpha-tdep.c (alpha_dwarf2_init_abi): New.
 	* alpha-tdep.h (alpha_dwarf2_init_abi): Declare it.
 	* alpha-linux-tdep.c (alpha_linux_init_abi): Use it.
