--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2003-06-03  Richard Henderson  <rth@redhat.com>
 
+	* alpha-tdep.c (alpha_next_pc): Use alpha_read_insn.
+	(alpha_sigtramp_frame_this_id): Use get_frame_memory.
+	(alpha_sigtramp_frame_prev_register): Likewise.
+	(alpha_heuristic_frame_prev_register): Likewise.
+	* alpha-mdebug-tdep.c (alpha_mdebug_frame_prev_register): Likewise.
+
 	* alpha-mdebug-tdep.c (alpha_mdebug_after_prologue): Use 
 	alpha-specific register id names.
 	(alpha_mdebug_frame_unwind_cache): Likewise.
